# transcriptionist

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
tests/: __init__.py  test_levenshtein.py  test_matrices.py  test_schemata.py
transcriptionist/: __init__.py  constants.py  levenshtein.py  matrices.py  schemata.py
