[metadata]
name = transcriptionist
version = 0.1
author = Florian Breit
author_email = florian@florian.me.uk
description = Utilities for the automated scoring/marking of phonetic transcriptions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatfloflo/transcriptionist
project_urls =
    Bug Tracker = https://github.com/thatfloflo/transcriptionist/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9
install_requires =
  multimethod
